# spnavcfg

./: .gitignore  Makefile  Makefile.in  README  README.md  TODO  back.c  cfgfile.c  cfgfile.h  cmd.h  configure  front.c  front_gtk.c  meson.build  spnavcfg.c
.github/workflows/: build_freebsd.yml  build_gnulinux.yml  build_gnulinux_meson.yml  build_macosx.yml
icons/: license  meson.build  spnavcfg.desktop
src/: main.c  main.cc  spnavcfg.c  spnavcfg.h  ui.cc  ui.h
ui/: about.ui  bnmaprow.ui  meson.build  spnavcfg.qrc  spnavcfg.ui  ui.xml
