install_data([
    'spnavcfg-48x48.png'
  ],
  install_dir: 'share/icons/hicolor/48x48'
)
install_data([
    'spnavcfg-128x128.png'
  ],
  install_dir: 'share/icons/hicolor/128x128'
)
install_data([
    'spnavcfg-256x256.png'
  ],
  install_dir: 'share/icons/hicolor/256x256'
)

install_data([
    'spnavcfg.desktop'
  ],
  install_dir: 'share/applications'
)
